add npm script for build:watch

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {},
   "scripts": {
-    "build": "grunt"
+    "build": "grunt",
+    "build:watch": "grunt --watch"
   }
 }
