Add pause functionality. clean up event listening and game state so that events are listened for in proper game state

--- a/package.json
+++ b/package.json
@@ -15,6 +15,6 @@
   "dependencies": {},
   "scripts": {
     "build": "grunt",
-    "build:watch": "grunt --watch"
+    "build:watch": "grunt watch"
   }
 }
